--- a/schedule/css/main.css
+++ b/schedule/css/main.css
@@ -663,7 +663,7 @@ input {
 
 .board__items {
   overflow-y: auto;
-  max-height: 80vh; }
+  max-height: 75vh; }
 
 .boards__item:first-child {
   border-top: 1px solid #D0D3DA; }
@@ -1170,6 +1170,7 @@ input {
 
 .appointment-hover {
   position: absolute;
+  top: 0;
   opacity: 0;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1205,6 +1206,7 @@ input {
 
 .appointment-drop-list, .absence-drop-list {
   position: absolute;
+  top: 0;
   padding: 15px 0px;
   background-color: #ffffff;
   border-radius: 6px;
